syntax = "proto3";

package proto;

option go_package = "/pb";

import "google/api/annotations.proto";

service BookService {
    rpc CreateBook(CreateBookRequest) returns (CreateBookResponse) {
        option (google.api.http) = {
            post: "/v1/books"
            body: "book"
        };
    }
    rpc GetBook(GetBookRequest) returns (GetBookResponse) {
        option (google.api.http) = {
            get: "/v1/books/{id}"
        };
    }
    rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse) {
        option (google.api.http) = {
            put: "/v1/books/{book.id}"
            body: "book"
        };
    }
    rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse) {
        option (google.api.http) = {
            delete: "/v1/books/{id}"
        };
    }
    rpc ListBooks(Empty) returns (ListBooksResponse) {
        option (google.api.http) = {
            get: "/v1/books"
        };
    }
}

message Book {
    int32 id = 1;
    string title = 2;
    string author = 3;
}

message CreateBookRequest {
    Book book = 1;
}

message CreateBookResponse {
    Book book = 1;
}

message GetBookRequest {
    int32 id = 1;
}

message GetBookResponse {
    Book book = 1;
}

message UpdateBookRequest {
    Book book = 1;
}

message UpdateBookResponse {
    Book book = 1;
}

message DeleteBookRequest {
    int32 id = 1;
}

message DeleteBookResponse {
    bool success = 1;
}

message ListBooksResponse {
    repeated Book books = 1;
}

message Empty {}