syntax = "proto3";

package proto;

option go_package = "/pb";

import "google/api/annotations.proto";

service UserService {
    rpc ListUsers(EmptyUser) returns (ListUsersResponse) {
        option (google.api.http) = {
            get: "/v1/users"
        };
    }
}

message User {
    int32 id = 1;
    string name = 2;
}

message ListUsersResponse {
    repeated User Users = 1;
}

message EmptyUser {}  // Renamed from Empty to EmptyUser